Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -430,6 +430,25 @@
       </div>
     </div>
   </section>   
+
+</section>
+
+<!-- ▶ Real Success Stories -->
+<section class="py-12 bg-gray-50">
+  <div class="max-w-4xl mx-auto space-y-6">
+    <h3 class="text-2xl font-bold text-center">What Our Customers Say</h3>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <blockquote class="bg-white p-6 rounded-lg shadow">
+        “I exited my timeshare in just 4 weeks using their kit—no lawyers required.”
+        <footer class="mt-4 font-semibold">— Maria L. (Spain)</footer>
+      </blockquote>
+      <blockquote class="bg-white p-6 rounded-lg shadow">
+        “Saved over €2,500 compared to hiring a solicitor. Highly recommend!”
+        <footer class="mt-4 font-semibold">— John B. (UK)</footer>
+      </blockquote>
+    </div>
+  </div>
+</section>
    
 <!-- Quick Highlights -->
 <section class="py-12 bg-blue-50">
@@ -507,29 +526,6 @@
              loading="eager" />
       </section>
     </section>  
-  
-    <!-- News Testimonials Section -->
-    <div class="w-full max-w-7xl mx-auto px-4 py-8">
-      <div class="bg-white border rounded-xl p-6 shadow-md">
-        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 text-center">
-          <!-- News Item 1 -->
-          <div>
-            <img src="/images/logo-arda.png" alt="ARDA" class="mx-auto h-10 mb-2">
-            <p class="text-sm text-gray-700">“There’s no need to deal with exit companies, because there are safe ways to exit a timeshare.”</p>
-          </div>
-          <!-- News Item 2 -->
-          <div>
-            <img src="/images/logo-foxnews.png" alt="Fox News" class="mx-auto h-10 mb-2">
-            <p class="text-sm text-gray-700">“Timeshares do not appreciate in value… selling may mean losing money.”</p>
-          </div>
-          <!-- News Item 3 -->
-          <div>
-            <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
-            <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yourself Kit, No Lawyers, No Surprises!”</p>
-          </div> 
-        </div>
-      </div>
-    </div>
 
 <!-- Legal Explanation with Background -->
 <section class="py-16 bg-cover bg-center bg-no-repeat" style="background-image: url('images/airport-background-night.jpg');">
@@ -580,6 +576,11 @@
        class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
       Buy your Do-It-Yourself Kit today for only €169
     </a>
+    <!-- ☆ Payment Security Badge -->
+    <p class="mt-2 text-sm text-gray-600 flex items-center justify-center space-x-2">
+      <img src="/images/visa-mastercard-badge.png" alt="Visa & Mastercard" class="h-5" />
+      <span>Paid via Visa/Mastercard — 3D Secure protected</span>
+    </p>
 
     <a href="/full-service.html"
        class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
@@ -798,10 +799,19 @@
        class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
       Buy your Do-It-Yourself Kit today for only €169
     </a>
+    <!-- ☆ Payment Security Badge -->
+    <p class="mt-2 text-sm text-gray-600 flex items-center justify-center space-x-2">
+      <img src="/images/visa-mastercard-badge.png" alt="Visa & Mastercard" class="h-5" />
+      <span>Paid via Visa/Mastercard — 3D Secure protected</span>
+    </p>
   
     <a href="/full-service.html"
-       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+       class="relative inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
       Let ExitMyTimeshares.com do all the work
+      <!-- Guarantee Ribbon -->
+      <span class="absolute -top-2 -right-4 bg-green-500 text-white text-xs font-semibold px-2 py-1 rounded transform rotate-12">
+        100% Refund Guarantee
+      </span>
     </a>
   </div>
 
@@ -891,5 +901,16 @@
     });
 </script>
   
+</script>
+
+<!-- ▶ Help Chat Prompt -->
+<div class="fixed bottom-4 right-4 bg-blue-600 text-white rounded-full p-4 shadow-lg flex items-center space-x-2">
+  <img src="/images/contact-whatsapp-badge.png" alt="WhatsApp" class="h-6" />
+  <a href="https://wa.me/447578600296" class="font-semibold">Chat with us</a>
+</div>
+
+</body>
+</html>
+
 </body>
 </html>
