Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -386,6 +386,34 @@
 
 </section>   <!-- ← end of How It Works -->
 
+</section>
+<!-- Quick Highlights above -->
+
+<!-- ========== Credibility & Security ========== -->
+<section class="py-12 bg-white">
+  <div class="max-w-6xl mx-auto px-4 text-center space-y-6">
+    <!-- Trusted By Logos -->
+    <div class="flex flex-wrap justify-center items-center gap-8">
+      <img src="/images/logo-arda.png" alt="ARDA" class="h-12" />
+      <img src="/images/logo-eu-consumer-watch.png" alt="EU Consumer Watch" class="h-12" />
+      <img src="/images/logo-foxnews.png" alt="Fox News" class="h-12" />
+    </div>
+    <!-- Payment Security -->
+    <div class="flex justify-center items-center gap-4">
+      <span class="text-xl">🔒</span>
+      <p class="text-gray-700 max-w-xl">
+        Pay securely by Visa or Mastercard—your purchase is protected by your card provider’s fraud guarantee.
+      </p>
+    </div>
+    <!-- Industry Reminder -->
+    <p class="text-gray-600 italic max-w-2xl mx-auto">
+      “There’s no need for expensive exit companies—experts estimate 70% of timeshare owners can cancel on their own with the right letter.”<br/>
+      — Association of Resort Development Agents (ARDA)
+    </p>
+  </div>
+</section>
+<!-- Continue with next section… -->
+
         <!-- FAQ: answer common concerns in plain English -->
         <section id="faq" class="py-12 bg-white">
             <div class="max-w-4xl mx-auto px-4">
@@ -917,14 +945,24 @@
   
 </script>
 
-<!-- ▶ Help Chat Prompt -->
-<div class="fixed bottom-4 right-4 bg-blue-600 text-white rounded-full p-4 shadow-lg flex items-center space-x-2">
-  <img src="/images/contact-whatsapp-badge.png" alt="WhatsApp" class="h-6" />
-  <a href="https://wa.me/447578600296" class="font-semibold">Chat with us</a>
-</div>
+  <!-- Help Chat Prompt -->
+  <div class="fixed bottom-4 right-4 bg-blue-600 text-white rounded-full p-4 shadow-lg flex items-center space-x-2">
+    <img src="/images/contact-whatsapp-badge.png" alt="WhatsApp" class="h-6" />
+    <a href="https://wa.me/447578600296" class="font-semibold">Chat with us</a>
+  </div>
+
+  <!-- Sticky Footer CTA -->
+  <div class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-3 flex justify-center gap-4 z-50">
+    <a href="/download-kit.html"
+       class="flex-1 text-center bg-green-600 hover:bg-green-700 text-white font-bold py-2 rounded-lg shadow">
+      Buy the Do It Yourself Kit £169 | €189 | $209
+    </a>
+    <a href="/full-service.html"
+       class="flex-1 text-center bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 rounded-lg shadow">
+      Full-Service Option
+    </a>
+  </div>
 
 </body>
 </html>
 
-</body>
-</html>
