Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -500,12 +500,12 @@
       <div>
         <div class="text-5xl mb-2">⚖️</div>
         <h4 class="font-semibold mb-1">Legal-Grade Templates</h4>
-        <p class="text-gray-600">Lawyer-vetted letters—just fill in & send.</p>
+        <p class="text-gray-600">Lawyer-vetted letters—just fill in and send.</p>
       </div>
       <div>
         <div class="text-5xl mb-2">💸</div>
         <h4 class="font-semibold mb-1">Save Thousands</h4>
-        <p class="text-gray-600">One-time €169 kit vs. €2,000+ in legal fees.</p>
+        <p class="text-gray-600">One-time kit vs. 2,000+ in legal fees.</p>
       </div>
       <div>
         <div class="text-5xl mb-2">⏱️</div>
