Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -615,28 +615,14 @@
     </div>
   </section>  
 
-  <div class="text-center space-y-4">
-    <a href="/download-kit.html"
-       class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-      Buy your Do-It-Yourself Kit today for only €169
-    </a>
-    <!-- ☆ Payment Security Badge -->
-    <p class="mt-2 text-sm text-gray-600 flex items-center justify-center space-x-2">
-      <img src="/images/visa-mastercard-badge.png" alt="Visa & Mastercard" class="h-5" />
-      <span>Paid via Visa/Mastercard — 3D Secure protected</span>
-    </p>
-
-    <a href="/full-service.html"
-       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-      Let ExitMyTimeshares.com do all the work
-    </a>
-  </div>
-
   <!-- Mini success story for social proof -->
-  <div class="max-w-4xl mx-auto px-4 mt-6 text-center">
-    <p class="italic text-gray-700">
-      “I saved over €3 000 and exited my timeshare in just 3 weeks using this kit!” – Mary S., United Kingdom
-    </p>
+  <div class="max-w-4xl mx-auto px-4 mt-6">
+    <div class="bg-yellow-50 border-l-4 border-yellow-500 p-4 rounded-lg shadow-sm">
+      <p class="italic text-gray-800">
+        “An exit company tried to charge me over €3 000 in fees—so I bought the Do-It-Yourself Kit instead, saved myself so much money, and exitmytimeshares.com made it so easy. It was all done in just 3 weeks!”
+      </p>
+      <p class="mt-2 font-semibold text-gray-700">— Mary S., United Kingdom</p>
+    </div>
   </div>
     
       <section class="bg-white pt-6 px-4 sm:px-6 lg:px-8">
