--- a/public/test2.html
+++ b/public/test2.html
@@ -276,7 +276,7 @@
       <div class="mt-6 text-center">
         <a href="/download-kit.html"
            class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-          Buy your Do-It-Yourself Kit today for only €169
+          Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
         </a>
       </div>
     </div>
@@ -358,7 +358,7 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
-        <p class="text-base text-gray-600">Instant access for just €169 — includes legal letters and step-by-step guidance.</p>
+        <p class="text-base text-gray-600">Instant access for just $229 | £169 | €199 — includes legal letters and step-by-step guidance.</p>
       </div>
 
       <!-- Step 3 -->
@@ -574,7 +574,7 @@
 <div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-red-300 transition-transform duration-300 hover:-translate-y-1">
     <h3 class="text-lg font-bold text-red-700 mb-4 text-center">USING A LAWYER</h3>
     <ul class="text-gray-800 text-sm space-y-3">
-      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Legal fees often exceed €2,000 or more</span></li>
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Legal fees often exceed 2,000 or more</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Complex legal process with no guaranteed result</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Delays of 6–18 months are common</span></li>
       <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Many firms offer no refund if they fail</span></li>
@@ -614,7 +614,7 @@
   <div class="max-w-4xl mx-auto px-4 mt-6">
     <div class="bg-yellow-50 border-l-4 border-yellow-500 p-4 rounded-lg shadow-sm">
       <p class="italic text-gray-800">
-        “An exit company tried to charge me over €3 000 in fees—so I bought the Do-It-Yourself Kit instead, saved myself so much money, and exitmytimeshares.com made it so easy. It was all done in just 3 weeks!”
+        “An exit company tried to charge me over 3,000 in fees—so I bought the Do-It-Yourself Kit instead, saved myself so much money, and exitmytimeshares.com made it so easy. It was all done in just 3 weeks!”
       </p>
       <p class="mt-2 font-semibold text-gray-700">— Mary S., United Kingdom</p>
     </div>
@@ -802,7 +802,7 @@
         <p class="text-sm text-gray-600">Official contract termination — no more annual fees</p>
       </div>
   
-      <!-- Image 2: Only 169 Euro -->
+      <!-- Image 2: Only $229 | £169 | €199 -->
       <div data-aos="zoom-in" data-aos-delay="100">
         <img src="images/only-169-euro.jpg" class="rounded-xl shadow-md mb-3" alt="Affordable Exit Kit" />
         <p class="text-sm text-gray-600">Buy your Do-It-Yourself Exit Kit today — just €169</p>
@@ -820,7 +820,7 @@
   <div class="text-center space-y-4">
     <a href="/download-kit.html"
        class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-      Buy your Do-It-Yourself Kit today for only €169
+      Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
     </a>
     <!-- ☆ Payment Security Badge -->
     <p class="mt-2 text-sm text-gray-600 flex items-center justify-center space-x-2">
