Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -4,7 +4,36 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exitmytimeshares.com | Quaerens</title>
+  <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+        content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
+  <meta name="keywords"
+        content="timeshare exit, cancel timeshare, DIY timeshare, timeshare cancellation kit, timeshare cancellation letters, club la costa, hilton resorts, dimaond resorts, dri, anfi, wyndham, marriot, diamond  " />
+
+  <!-- Structured Data for Google (Product & Offer) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Do-It-Yourself Timeshare Exit Kit",
+    "image": "https://www.exitmytimeshares.com/images/kit-preview.jpg",
+    "description": "Lawyer-vetted cancellation letters & guide for €169, 3–6 week process, money-back guarantee.",
+    "brand": {
+      "@type": "Organization",
+      "name": "Quaerens Ltd"
+    },
+    "offers": {
+      "@type": "Offer",
+      "url": "https://www.exitmytimeshares.com/download-kit.html",
+      "priceCurrency": "EUR",
+      "price": "169.00",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+</head>
 
   <!-- 1) Reset to English BEFORE anything else -->
   <script>
@@ -482,7 +511,7 @@
         <footer class="mt-4 font-semibold">— Maria L. (Spain)</footer>
       </blockquote>
       <blockquote class="bg-white p-6 rounded-lg shadow">
-        “Saved over €2,500 compared to hiring a solicitor. Highly recommend!”
+        “Saved over 2,500 compared to hiring a solicitor. Highly recommend!”
         <footer class="mt-4 font-semibold">— John B. (UK)</footer>
       </blockquote>
     </div>
@@ -631,9 +660,9 @@
             </p>
             <!-- Simplified bullet points with links -->
             <ul class="list-disc list-inside text-gray-800 space-y-3 mb-4">
-              <li><strong>EU Timeshare Directive:</strong> Right to cancel within 14 days of purchase. <a href="/eu-directive.html" class="text-blue-600 underline">Find full details</a></li>
-              <li><strong>Spanish Law:</strong> Contracts signed without clear info may be void. <a href="/spain-law.html" class="text-blue-600 underline">Learn more</a></li>
-              <li><strong>US & UK:</strong> Many resorts accept voluntary surrenders—no lawyer needed. <a href="/us-uk-guide.html" class="text-blue-600 underline">Read guide</a></li>
+              <li><strong>EU Timeshare Directive:</strong> Right to cancel within 14 days of purchase.</a></li>
+              <li><strong>Spanish Law:</strong> Contracts signed without clear info may be void.</a></li>
+              <li><strong>US & UK:</strong> Many resorts accept voluntary surrenders—no lawyer needed.</a></li>
             </ul>
             <p class="text-gray-600 italic">Our templates include exact clauses you need—no guesswork.</p>
         </div>
