Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -387,7 +387,7 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-yellow-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-yellow-500 mb-4">2</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Buy the DIY Kit</h3>
-        <p class="text-base text-gray-600">Instant access for just $229 | £169 | €199 — includes legal letters and step-by-step guidance.</p>
+        <p class="text-base text-gray-600">Instant access for just $229 | £169 | €199 This includes legal letters and step-by-step guidance.</p>
       </div>
 
       <!-- Step 3 -->
@@ -401,7 +401,7 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-purple-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-purple-500 mb-4">4</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Exit Complete</h3>
-        <p class="text-base text-gray-600">Most clients receive written confirmation within a few weeks — stress-free and final.</p>
+        <p class="text-base text-gray-600">Most clients receive written confirmation within a few weeks, stress-free and final.</p>
       </div>
 
     </div>
@@ -643,7 +643,7 @@
   <div class="max-w-4xl mx-auto px-4 mt-6">
     <div class="bg-yellow-50 border-l-4 border-yellow-500 p-4 rounded-lg shadow-sm">
       <p class="italic text-gray-800">
-        “An exit company tried to charge me over 3,000 in fees—so I bought the Do-It-Yourself Kit instead, saved myself so much money, and exitmytimeshares.com made it so easy. It was all done in just 3 weeks!”
+        “An exit company tried to charge me over 3,000 in fees, so I bought the Do-It-Yourself Kit instead, saved myself so much money, and exitmytimeshares.com made it so easy. It was all done in just 3 weeks!”
       </p>
       <p class="mt-2 font-semibold text-gray-700">— Mary S., United Kingdom</p>
     </div>
@@ -706,15 +706,15 @@
            class="mt-2 space-y-3 text-gray-700 text-sm sm:text-base">
         <div class="flex items-start gap-2">
           <span class="text-green-600 mt-1">✔</span>
-          <p>Pre-drafted legal letters to cancel your timeshare — used by real lawyers.</p>
+          <p>Pre-drafted legal letters to cancel your timeshare, used by real lawyers.</p>
         </div>
         <div class="flex items-start gap-2">
           <span class="text-green-600 mt-1">✔</span>
-          <p>Step-by-step instructions in plain English — easy to follow, even for beginners.</p>
+          <p>Step-by-step instructions in your own language, easy to follow, even for beginners.</p>
         </div>
         <div class="flex items-start gap-2">
           <span class="text-green-600 mt-1">✔</span>
-          <p>Covers contracts in the EU, UK, USA, and beyond — including Spain, Portugal, and Florida.</p>
+          <p>Covers contracts in the EU, UK, USA, and beyond, including Spain, Portugal, and Florida.</p>
         </div>
         <div class="flex items-start gap-2">
           <span class="text-green-600 mt-1">✔</span>
@@ -745,7 +745,7 @@
       <!-- Refund Guarantee -->
       <div class="flex flex-col items-center" data-aos="fade-up" data-aos-delay="100">
         <img src="/images/shield-refund.png" alt="Refund Guarantee" class="w-[100px] h-auto mb-4">
-        <p class="text-sm text-gray-600">🛡️ Full refund if the Do It Yourself Kit is not effective — no questions asked.</p>
+        <p class="text-sm text-gray-600">🛡️ Full refund if the kit is not effective, no questions asked!</p>
       </div>
   
       <!-- Email Contact -->
