--- a/public/test2.html
+++ b/public/test2.html
@@ -271,44 +271,41 @@
         </ul>
       </div>
   
-    <!-- Right: Resort Eligibility Checker -->
-    <div class="bg-white rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
-        <div class="bg-yellow-300 text-blue-900 px-4 py-4 rounded-t-xl text-center border-b-2 border-yellow-500">
-          <h2 class="text-2xl font-bold">Check If Your Resort Is Eligible</h2>
-          <p class="text-base mt-1">
-            Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
-          </p>
-        </div>
-        <form id="resort-check-form" class="mt-6 space-y-4">
-          <label for="resort" class="block font-semibold">Resort Name</label>
-          <input list="resorts" id="resort" name="resort"
-                 placeholder="e.g. Sunset Bay Club, Anfi Del Mar..."
-                 class="w-full border border-gray-300 p-3 rounded text-base" required />
-          <button type="submit"
-                  class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded transition">
-            Check Eligibility
-          </button>
-        </form>
-        <div id="resort-result" class="mt-4 text-center text-lg font-semibold hidden"></div>
-        <a href="/download-kit.html" id="kit-button"
-           class="mt-6 block w-full text-center bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300 hidden">
-          Get the Do-It-Yourself Exit Kit →
-        </a>
-          
-      <!-- Tip + Fallback Message -->
-      <p class="mt-6 text-sm text-gray-700 text-center">
-        <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
-        💡 <em>Tip:</em> Many resorts allow free exit if no loan is outstanding — check with them directly.
-      </p>
-          
-      <!-- Bottom CTA -->
-      <div class="mt-6 text-center">
-        <a href="/download-kit.html"
-           class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
-          Buy your Do-It-Yourself Kit today for only $229 | £169 | €199
-        </a>
-      </div>
+<!-- Right: DIY Exit Kit CTA & Resort Eligibility Checker -->
+<div class="bg-white rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
+    <!-- Main CTA First -->
+    <div class="text-center mb-6">
+      <a href="/download-kit.html"
+         class="block w-full text-center bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold text-lg py-4 px-6 rounded-xl shadow-md transition duration-300">
+        ✅ Get the Do-It-Yourself Exit Kit – Only $229 / £169 / €199
+      </a>
+      <p class="mt-2 text-sm text-gray-600">Instant access after purchase • Includes templates & guide</p>
     </div>
+  
+    <!-- Resort Eligibility Checker -->
+    <div class="bg-yellow-300 text-blue-900 px-4 py-4 rounded-t-xl text-center border-b-2 border-yellow-500">
+      <h2 class="text-2xl font-bold">Check If Your Resort Is Eligible</h2>
+      <p class="text-base mt-1">
+        Enter your resort name to see if the Do-It-Yourself Kit works for you.
+      </p>
+    </div>
+    <form id="resort-check-form" class="mt-6 space-y-4">
+      <label for="resort" class="block font-semibold">Resort Name</label>
+      <input list="resorts" id="resort" name="resort"
+             placeholder="e.g. Sunset Bay Club, Anfi Del Mar..."
+             class="w-full border border-gray-300 p-3 rounded text-base" required />
+      <button type="submit"
+              class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded transition">
+        Check Eligibility
+      </button>
+    </form>
+    <div id="resort-result" class="mt-4 text-center text-lg font-semibold hidden"></div>
+  
+    <!-- Tip + Contact -->
+    <p class="mt-6 text-sm text-gray-700 text-center">
+      <strong>Not listed?</strong> Contact us — we may still be able to help!<br>
+      💡 <em>Tip:</em> Many resorts allow free exit if no loan is outstanding — check with them directly.
+    </p>
   </div>      
   
         <!-- Resort List -->
@@ -380,7 +377,7 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-blue-300 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-blue-700 mb-4">1</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Check Resort Policy</h3>
-        <p class="text-base text-gray-600">Some resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
+        <p class="text-base text-gray-600">Few resorts offer free exits if your loan is paid and fees are current. Always check first.</p>
       </div>
 
       <!-- Step 2 -->
@@ -394,7 +391,7 @@
       <div class="bg-white rounded-2xl shadow-lg p-6 border-2 border-green-400 hover:shadow-xl transition-all duration-300">
         <div class="text-5xl font-extrabold text-green-500 mb-4">3</div>
         <h3 class="font-bold text-lg mb-2 text-gray-800">Send Your Letter</h3>
-        <p class="text-base text-gray-600">Use our pre-written legal template to cancel your timeshare with confidence.</p>
+        <p class="text-base text-gray-600">Use our pre written legal template to cancel your timeshare with confidence.</p>
       </div>
 
       <!-- Step 4 -->
